namespace java com.igool.rpc.db.service.thrift
service CacheService {
		 	map<string, string> getBusinessType(),
		 	map<string, string> getPlatType()
	}