include "dzda/platetype.thrift"
namespace java com.igool.rpc.db.service.thrift

service PlateTypeService {
		 	list<platetype.PlateType> getAllPlateType()
		 }